--- a/app/src/main/res/drawable/page_sle.xml
+++ b/app/src/main/res/drawable/page_sle.xml
@@ -2,8 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/colorBGNormal"></solid>
-    <size android:width="@dimen/pointWidth" android:height="@dimen/pointHeight"></size>
-
+    <solid
+        android:color="@color/colorBGNormal">
+    </solid>
+    <size
+        android:width="@dimen/pointWidth"
+        android:height="@dimen/pointHeight"></size>
+    <corners
+        android:bottomLeftRadius="3dp"
+        android:bottomRightRadius="3dp"
+        android:topLeftRadius="3dp"
+        android:topRightRadius="3dp" />
 
 </shape>
