--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,9 @@
     <dimen name="topbarImageHeight">22px</dimen>
     <dimen name="topbarImageHight10">10px</dimen>
     <dimen name="topbarImageWidth56">56px</dimen>
+    <dimen name="marging2">10px</dimen>
+    <dimen name="marging4">10px</dimen>
+    <dimen name="marging6">10px</dimen>
     <dimen name="marging10">10px</dimen>
     <dimen name="marging40">40px</dimen>
     <dimen name="marging60">60px</dimen>
@@ -19,10 +22,12 @@
     <dimen name="marging20">20px</dimen>
     <dimen name="textView1MarginTop">38px</dimen>
     <dimen name="textView1SizeTop">34px</dimen>
+    <dimen name="textView1MarginBtm">10px</dimen>
     <dimen name="marging25">25px</dimen>
 
-    <dimen name="imageViewWidthHeight">160px</dimen>
-    <dimen name="imageViewMarginTop">104px</dimen>
+    <dimen name="imageViewWidth">50px</dimen>
+    <dimen name="imageViewHeight">50px</dimen>
+    <dimen name="imageViewMarginTop">10px</dimen>
 
     <dimen name="bottom1LayoutMarginBot">72px</dimen>
     <dimen name="textView2MarginLeft">14px</dimen>
@@ -36,4 +41,19 @@
 
     <dimen name="switchHeightWidth">24px</dimen>
     <dimen name="switchTextSize">24px</dimen>
+
+
+
+    <!-- 文字大小 -->
+    <dimen name="text_40">40sp</dimen>
+    <dimen name="text_23">23sp</dimen>
+    <dimen name="text_20">20sp</dimen>
+    <dimen name="text_18">18sp</dimen>
+    <dimen name="text_17">17sp</dimen>
+    <dimen name="text_16">16sp</dimen>
+    <dimen name="text_15">15sp</dimen>
+    <dimen name="text_14">14sp</dimen>
+    <dimen name="text_time_14">14sp</dimen>
+    <dimen name="text_12">12sp</dimen>
+    <dimen name="text_setting">21dp</dimen>
 </resources>
