--- a/app/src/main/res/layout/activity_allapp.xml
+++ b/app/src/main/res/layout/activity_allapp.xml
@@ -6,20 +6,28 @@
     android:background="@drawable/background"
     tools:context="com.rmicro.launcher.AllAPP">
 
+    <LinearLayout
+        android:id="@+id/appAppPoint"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/topbarImageHeight"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/marging4"
+        android:gravity="center"
+        android:orientation="horizontal"></LinearLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/mViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/marging40"
-        android:layout_marginTop="@dimen/marging40"
-      ></android.support.v4.view.ViewPager>
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"></android.support.v4.view.ViewPager>
 
-    <LinearLayout
-        android:id="@+id/appAppPoint"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/marging40"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:orientation="horizontal"></LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:id="@+id/appAppPoint"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/marging40"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:gravity="center"-->
+        <!--android:orientation="horizontal"></LinearLayout>-->
 
 </RelativeLayout>
