--- a/app/src/main/res/drawable/page_no_sle.xml
+++ b/app/src/main/res/drawable/page_no_sle.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-
-    <solid
-        android:color="@color/colorNOSelect">
-    </solid>
-    <size
-        android:width="@dimen/pointWidth"
-        android:height="@dimen/pointHeight">
-    </size>
-    <corners
-        android:bottomLeftRadius="3dp"
-        android:bottomRightRadius="3dp"
-        android:topLeftRadius="3dp"
-        android:topRightRadius="3dp" />
+    android:shape="rectangle" >
+    <!--gradient   对应颜色渐变。。-->
+    <!--solid      填充。-->
+    <!--stroke     描边。-->
+    <!--corners   圆角。-->
+    <!--padding   定义内容离边界的距离。 与android:padding_left、android:padding_right这些是一个道理-->
+    <!-- 填充颜色 -->
+    <solid android:color="@color/line_bg" />
+    <stroke
+        android:width="2dp"
+        android:color="@color/line_bg"/>
+    <!-- 矩形的圆角半径 -->
+    <corners android:radius="0dp" />
 </shape>
