--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,11 @@
     <LinearLayout
         android:id="@+id/navigationPoint"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/topbarImageHeight"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="@dimen/marging4"
+        android:layout_height="20dp"
+        android:layout_marginTop="5dp"
         android:gravity="center"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal">
+    </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPagerMain"
